--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
+    "lenis": "^1.3.16",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.11.0",
